--- a/src/styles/dashHome2.css
+++ b/src/styles/dashHome2.css
@@ -8,8 +8,26 @@
 .tripInfoBox{
     backdrop-filter: blur('20px');
     background-color: rgba(255, 255, 255, 0.384);
+    position: relative;
+    transition: all 0.3s ease;
 }
-.tripInfo{
-    width: 50px;
-    height: 50px;
+
+.tripInfoFlex {
+    opacity: 0; /* Hidden by default */
+    transform: translateY(20px); /* Translate down */
+    transition: all 0.3s ease;
+  }
+.tripInfoIcon{
+    width: 45px;
+    height: 45px;
+    transition: transform 0.3s ease;
+    transition: ease-in-out 0.5s;
 }
+
+.tripInfoBox:hover .tripInfoFlex {
+    opacity: 1; /* Show the icons */
+    transform: translateY(-10px); /* Translate upwards */
+  }
+  .tripInfoIcon:hover{
+    box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.486);
+  }
