--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,151 @@
     scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
 }
+
+
+.nav{
+    background-color: white;
+    width: 100%;
+    height: 5%;
+    padding: 40px 0px;
+    display: flex;
+    justify-content: space-around;
+}
+.btn-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    font-size: 20px;
+}
+.btn-container .btn1{
+    width: 100px;
+    height: 45px;
+    background-color: #004010;
+    color: white;
+    border-radius: 20px;
+}
+.btn-container .btn2{
+    background-color: white;
+    color: #004010;
+
+}
+.nav ol{
+    list-style-type: none;
+    display: flex;
+    gap: 20%;
+    color: black;
+    font-size: 20px;
+}
+.landing-page-container{
+    display: flex;
+    justify-content: space-around;
+    background-color: white;
+    /* margin: 150px 150px; */
+    /* width: 80%; */
+}
+.landing-page-container .landing-left{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+}
+.landing-page-container .landing-left .h1{
+    font-size: 50px;
+    display: flex;
+    color: #004010;
+}
+.landing-page-container .landing-left .h1 strong{
+    color: #004010;
+    font-weight: 600;
+}
+.landing-page-container .landing-left .text2{
+    font-size:22px ;
+    text-overflow: ellipsis;
+}
+.landing-page-container .landing-left button{
+    background-color: #004010;
+    width: 150px;
+    height: 40px;
+    color: white;
+    border-radius: 20px;
+    font-weight: 600;
+}
+.landing-page-container .landing-right{
+    width: 40%;
+    height: fit-content;
+    border-radius: 20px;
+}
+.landing-page-container .landing-right img{
+    height: 440px;
+    width: 440px;
+    border-radius: 25px;
+}
+
+@media screen and (max-width: 600px){
+    .nav{
+        font-size: 14px;
+        justify-content:space-evenly;
+    }
+    .nav ol{
+        gap: 5%;
+    }
+    .btn-container{
+        gap: 10px
+
+    }
+    .btn-container .btn1{
+        height: 45px;
+    }
+    .landing-page-container{
+        /* margin: 50px; */
+    }
+}
+@media screen and (max-width: 1024px){
+    .landing-page-container{
+        /* margin: 60px 70px; */
+    }
+    .landing-page-container .landing-left .h1{
+        font-size: 40px;
+    }
+    .landing-page-container .landing-left .text2{
+        font-size: 16px;
+    }
+}
+@media screen and (max-width: 1440px){
+    .landing-page-container{
+        /* margin: 60px 60px; */
+    }
+}
+@media screen and (max-width: 426px){
+    .nav{
+        /* display: none; */
+    }
+    .landing-page-container{
+        flex-direction: column;
+        /* margin: 50px; */
+    }
+    .landing-page-container .landing-right img{
+        height: 220px;
+        width: 220px;
+    }
+    .landing-page-container .landing-left .h1{
+        font-size: 20px;
+    }
+    .landing-page-container .landing-left .text2{
+        font-size: 10px;
+    }
+    .landing-page-container .landing-left .h1{
+        justify-content: unset;
+    }
+    .landing-page-container .landing-left button{
+        font-size: 10px;
+        background-color: #004010;
+        width: 100px;
+        height: 45px;
+        color: white;
+        border-radius: 20px;
+        font-weight: 400;
+    }
+}
